# GameEngineArchitecture

./: .gitignore  CMakeLists.txt  README.md  build.sh  game.py  main.py  run.sh  sdltest.cpp
ECS/: components.py  entity.py  systems.py
Entt-Pong/: CMakeLists.txt  README.md
Entt-Pong/include/: isDefined.h
Entt-Pong/src/: Game.h  main.cpp
Entt-Pong/src/ECS/: Components.h  Entity.h  System.h
Entt-Pong/src/Game/: Game.cpp  Game.h
Entt-Pong/src/Pong/: Components.h  Pong.cpp  Systems.cpp  Systems.h
Entt-Pong/src/Scene/: Scene.cpp  Scene.h
GameLoops-Pong/: CMakeLists.txt  README.md  build.sh  run.sh
GameLoops-Pong/include/: print.h
GameLoops-Pong/src/: Pong.cpp
SpriteManagement/: .gitignore  CMakeLists.txt  README.md
SpriteManagement/include/: isDefined.h  print.h
SpriteManagement/src/: main.cpp
SpriteManagement/src/ECS/: Components.h  Entity.h  System.h
SpriteManagement/src/ECS/SystemTypes/: EventSystem.h  RenderSystem.h  SetupSystem.h  SystemTypes.h  UpdateSystem.h
SpriteManagement/src/Game/: Game.cpp  Game.h
SpriteManagement/src/Game/Graphics/: PixelShader.h  Texture.cpp  Texture.h  TextureManager.cpp  TextureManager.h  Tile.h
SpriteManagement/src/Pong/: Components.h  Pong.cpp  Pong.h  Systems.h
SpriteManagement/src/Scene/: Scene.cpp  Scene.h
assets/tilemaps/: tiles.txt
include/: print.h
src/: Game.cpp  Game.h  Pong.cpp  Pong.h  main.cpp
